@@ -35,6 +35,7 @@ from gettext import gettext as _
 # GNOME libraries
 #
 #-------------------------------------------------------------------------
+import gtk
 from gtk import glade
 
 #-------------------------------------------------------------------------
